--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ng-doc-root>
   <ng-doc-navbar [leftContent]="leftContent" [rightContent]="controls">
     <ng-template #leftContent>
-      <a href="/" class="brand">
+      <a routerLink="/" class="brand">
         <img
           src="https://avatars.githubusercontent.com/u/160453188?s=200&v=4"
           alt="logo"
