--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <ng-doc-root>
-  <ng-doc-navbar [leftContent]="leftContent" [rightContent]="controls">
-    <ng-template #leftContent>
-      <a routerLink="/" class="brand">
+  <ng-doc-navbar>
+      <a routerLink="/" class="brand" ngDocNavbarLeft>
         <img
           src="https://avatars.githubusercontent.com/u/160453188?s=200&v=4"
           alt="logo"
@@ -11,8 +10,7 @@
           <h3 class="brand-title-coolshapes">coolshapes</h3>
         </div>
       </a>
-    </ng-template>
-    <ng-template #controls>
+    <div ngDocNavbarRight>
       <a
         ng-doc-button-icon
         size="large"
@@ -32,7 +30,7 @@
         <ng-doc-icon customIcon="twitter" [size]="24"></ng-doc-icon>
       </a>
       <ng-doc-theme-toggle></ng-doc-theme-toggle>
-    </ng-template>
+    </div>
   </ng-doc-navbar>
   <ng-doc-sidebar></ng-doc-sidebar>
   <router-outlet></router-outlet>
